--- a/scss/style.scss
+++ b/scss/style.scss
@@ -786,8 +786,9 @@ section {
         box-sizing: border-box;
         box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
         padding: 30px 40px;
-        height: 330px;
+        min-height: 370px;
         margin-bottom: 16px;
+        position: relative;
         &__description {
             font-size: 20px;
             line-height: 30px;
@@ -801,7 +802,15 @@ section {
             font-size: 18px;
             line-height: 27px;
         }
-        position: relative;
+        .reviews_item_icon {
+            width: 72px;
+            height: 72px;
+            img {
+                height: 100%;
+                width: 100%;
+                object-fit: cover;
+            }
+        }
         .red_circle1,
         .red_circle2 {
             position: absolute;
