--- a/css/style.css
+++ b/css/style.css
@@ -360,7 +360,8 @@ section {
 
 .section_promo .promo_text_wrap .section_description {
   color: #1D1D1D;
-  margin-bottom: 54px; }
+  margin-bottom: 54px;
+  text-align: start; }
 
 .section_promo .promo_text_wrap .promo_text_title {
   color: #B31217;
@@ -560,7 +561,7 @@ section {
         opacity: 1; } }
   @media (max-width: 575px) {
     .section_requirements > div {
-      padding-bottom: 64px; }
+      padding-bottom: 100px; }
     .section_requirements .section_title {
       font-size: 20px;
       line-height: 24px; }
@@ -632,8 +633,8 @@ section {
       font-weight: 900;
       text-align: center; }
     .section_reviews .reviews_item {
-      padding: 20px;
-      margin-bottom: 10px; }
+      padding: 30px 20px;
+      margin-bottom: 20px; }
       .section_reviews .reviews_item__description {
         font-size: 16px;
         line-height: 24px;
@@ -703,7 +704,7 @@ section {
       font-weight: 300; }
   @media (max-width: 575px) {
     .section_anketa {
-      padding: 50px 0 0; }
+      padding: 100px 0 60px; }
       .section_anketa .form_box__title,
       .section_anketa .form_item {
         padding: 0 20px; }
