--- a/scss/style.scss
+++ b/scss/style.scss
@@ -122,11 +122,6 @@ section {
 .section_intro {
     height: 100vh;
     padding-bottom: 0;
-    .banner_wrap {
-        height: 100%;
-        background: url(../assets/banner.jpg) no-repeat 0 100%;
-        background-size: cover;
-    }
     .banner_front_photo {
         width: 222px;
         height: 197px;
@@ -146,6 +141,11 @@ section {
         }
     }
     @media (min-width: $screen_sm) {
+        .banner_wrap {
+            height: 100%;
+            background: url(../assets/banner.jpg) no-repeat 0 100%;
+            background-size: cover;
+        }
         header {
             padding-top: 32px;
             .menu_box {
@@ -195,7 +195,9 @@ section {
     }
     @media (max-width: $screen_xs_max) {
         .banner_wrap {
-            background-position: 62% 100%;
+            height: 100%;
+            background: url(../assets/banner_mob.jpg) no-repeat 50% 100%;
+            background-size: cover;
         }
         .menu {
             margin-top: 50px;
@@ -445,7 +447,7 @@ section {
     }
     @media (min-width: $screen_xl) {
         .phone_list {
-            height: 70px;
+            height: 100px;
         }
     }
     @media (max-width: $screen_lg_max) {
@@ -590,8 +592,6 @@ section {
 // ---------------------------------------------------------- section_requirements ----------
 .section_requirements {
     padding: 0;
-    background: url(../assets/requirements.jpg) no-repeat 0 0;
-    background-size: cover;
     position: relative;
     overflow: hidden;
     &>div {
@@ -730,6 +730,10 @@ section {
             }
         }
     }
+    @media (min-width: $screen_sm) {
+        background: url(../assets/requirements.jpg) no-repeat 0 0;
+        background-size: cover;
+    }
     @media (max-width: $screen_md_max) {
         background-position: 70% 0;
         .section_title {
@@ -756,6 +760,8 @@ section {
         }
     }
     @media (max-width: $screen_xs_max) {
+        background: url(../assets/requirements_mob.jpg) no-repeat 9% 0;
+        background-size: cover;
         &>div {
             padding-bottom: 100px;
         }
@@ -866,8 +872,6 @@ section {
 // ========================================================== / section_reviews =============
 // ---------------------------------------------------------- section_anketa ---------------- 
 .section_anketa {
-    background: url(../assets/anketa.jpg) no-repeat 0 0;
-    background-size: cover;
     padding: 200px 0;
     position: relative;
     .background_darken {
@@ -937,7 +941,13 @@ section {
             font-weight: 300;
         }
     }
+    @media (min-width: $screen_sm) {
+        background: url(../assets/anketa.jpg) no-repeat 0 0;
+        background-size: cover;
+    }
     @media (max-width: $screen_xs_max) {
+        background: url(../assets/anketa_mob.jpg) no-repeat 0 0;
+        background-size: cover;
         padding: 100px 0 60px;
         .form_box__title,
         .form_item {
